# sdkpub

./: .gitignore
CLAPACK-3.2.1/: make.inc
CLAPACK-3.2.1/INCLUDE/: f2c.h
HP871X/HP871X/: 4parmdsp.txt  4parmdsp.vee  DeIsL1.isu  hp871x.GID  hp871x.bas  hp871x.cpp  hp871x.def  hp871x.fp  hp871x.h  hp871x.hlp  hp871x.rtf  readme.txt
HP871X/include/: 871x_cpp.h
andor/: ATMCD32D.H  ATMCD32M.LIB  atmcd32d.lib
clapack/: MSWin-Notes.txt  Makefile  README.install  README.maintain  clapack.dsp  clapack.h  clapack.positions  clapack.vcproj
clapack/BLAS/: blas.dsp  blas.vcproj  cblat2.in  cblat3.in  dblat2.in  dblat3.in  sblat2.in  sblat3.in  zblat2.in  zblat3.in
clapack/F2CLIBS/: f2c.h  libF77.dsp  libF77.vcproj  libI77.dsp  libI77.vcproj
clapack/INSTALL/: Makefile  dlamch.c  dlamchtst.c  dsecnd.c  dsecndtst.c  f2c.h  lawn81.ps  lawn81.tex  lsametst.c  make.inc.ALPHA  make.inc.HPPA  make.inc.LINUX  make.inc.OCTANE  make.inc.RS6K  make.inc.SUN4SOL2  org2.ps  psfig.tex  secondtst.c  slamch.c  slamchtst.c  tstiee.c
clapack/Release/: vc60.idb
clapack/SRC/: Makefile  dlaln2.c
cmu1394/: 1394Camera.inf  1394camera.chm  1394cmdr.sys
cmu1394/1394CameraDemo/: 1394CameraDemo.cpp  1394CameraDemo.dsp  1394CameraDlg.cpp  1394CameraDlg.h  1394PartialScanDlg.cpp  1394PartialScanDlg.h  1394camerademo.h  ChildView.cpp  ChildView.h  MainFrm.cpp  MainFrm.h  StdAfx.cpp  StdAfx.h  resource.h
cmu1394/include/: 1394Camera.h  1394CameraControl.h  1394CameraControlSize.h  1394CameraControlTrigger.h  1394camapi.h  1394common.h
cmu1394/lib/: 1394camera.lib
cmu1394/symbols/: 1394camera.exp  1394cmdr.map  1394cmdr.sym
devil/: Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
devil/docs/: apireference.html
devil/include/: Makefile  Makefile.in
devil/lib/: readme.txt
devil/libtools/: mkinstalldirs
devil/src-IL/: Makefile  Makefile.in
devil/src-ILU/: Makefile  Makefile.in
devil/src-ILUT/: Makefile  Makefile.in
dx8/: Uninst.isu
expat/: Makefile  config.status  libtool
ffmpeg/: README  version.sh
flockofbirds/: READ.ME
freeimage/: FreeImage.dep  FreeImage.mak  FreeImage.rc  FreeImage.sln  FreeImage.vcproj  Makefile  Makefile.fip  Makefile.osx  Makefile.srcs  README.linux  README.solaris  Whatsnew.txt  clean.bat  clean.sh  fipMakefile.srcs  genfipsrclist.sh  gensrclist.sh
freeimage-3.18/: FreeImage.2013.sln  FreeImage.2013.vcxproj
glfw/: Makefile  compile.bat  compile.sh  readme.html
glfw-2.7.2/: Makefile
gsl-1.8/: ChangeLog  Makefile.in  Readme_GnuWin32.txt  Readme_vs2013_x64.txt  configure
levmar-2.6/: Makefile  levmar.h  lm_core.c  lmbc_core.c  lmblec_core.c  lmdemo.c  lmlec_core.c
libsndfile/: Makefile.in  aclocal.m4  configure
libxml2/: dict.c
lua/: Lua51.dsp  Lua51.vcproj
matplotlib/: README
mesa/: configure
nidaq/: daqsupp.htm  daqsuppF.htm  daqsuppJ.htm  readme.htm  readmeD.htm  readmeF.htm  readmeJ.htm
nurbs/: Makefile
ode/: CHANGELOG  INSTALL  Makefile  Makefile.deps  README  configurator.c
opencv/: ChangeLog  makefile.bcc  makefile.gcc  makefile.icl  makefile.vc
opencv/apps/cvcsdemo/: Makefile.am  csdemoview.cpp  csdemoview.h  cvcsdemo.cpp  cvcsdemo.dsp  cvcsdemo.tcl
opencv/apps/cvcsdemo/pictures/: Makefile.am
opencv/apps/cvenv/: Makefile.am  add.cpp  colorer.cpp  colorer.h  cvenv.dsp  cvenv.h  cvenv.tcl  cvenv2.cpp  filelist.cpp  filelist.h  initeic.cpp  initeic.h  main.cpp  plugins.conf  seance.dsp
opencv/apps/cvenv/EiC/: CVEiCL.dsp  Makefile.am  callback.c  cdecl.c  cvEiC.dsp  eic.h  eicmod.c  error.h  global.h  preproc.h  reset.c  starteic.c  symbol.c  symbol.h  typemod.h  typesets.c
opencv/apps/cvenv/EiC/lib/: cvEiC.lib  cvEiCd.lib
opencv/apps/cvenv/EiC/stdClib/: Makefile.am  instSysH  printf.c  stdio.c
opencv/apps/cvenv/include/: Makefile.am  eicval.h  fcntl.h  limits.h  signal.h  stdlib.h
opencv/apps/cvenv/include/sys/: Makefile.am  errno.h  float.h  stdio.h  stdlib.h  stdtypes.h  termdefs.h  types.h
opencv/apps/cvenv/pictures/: Makefile.am
opencv/apps/cvenv/samples/: Makefile.am  cvcamsample.c
opencv/apps/cvlkdemo/: Makefile.am  cvlkdemo.cpp  cvlkdemo.dsp  cvlkdemo.h  cvlkdemo.tcl  demoview.cpp  demoview.h  tracker.cpp  tracker.h
opencv/apps/cvlkdemo/pictures/: Makefile.am
opencv/apps/vmdemotk/: CommandConcatenation.cpp  CommandConcatenation.h  DataandMorphing.cpp  DataandMorphing.h  Globals.h  Makefile.am  NewTclCommands.cpp  NewTclCommands.h  VMDemoTk.cpp  VMDemoTk.dsp  VMDemoTk.h  VMDemoTkInit.cpp  VMDemoTkInit.h  iniparse.tcl  interface.tcl  readme.txt
opencv/apps/vmdemotk/media/: Makefile.am  boy.ini  car.ini  computer.cpj  room.ini
opencv/otherlibs/cvcam/src/unix/: Makefile.am  convert.cpp  convert.h  cvvideo.cpp  cvvidtypes.h  dialogs.cpp  dialogs.h  icvvideo.h  render.cpp  render.h  videodev.h
opencv/tests/ats/src/: Makefile.am  common.c  comp1d.c  initfigure.c  initgrad.c  initrand.c  persistence.c  randex.c  system.c  timer.c
opencv2/: OpenCVConfig.cmake  OpenCVFindLATEX.cmake  OpenCVInstallRequiredSystemLibraries.cmake  Package.cmake.in
pcre/: Makefile.in  RunTest.in  config.guess  config.in  config.sub  configure  configure.in  ltmain.sh  mkinstalldirs  pcre.in  pcreposix.c  pcreposix.h  pcretest.c  perltest
plsuite/: IPLsupport.txt  UninstIPL.isu  iplindex.htm  ipllic.htm  iplnotes.htm
portmidi/: portmidi.dsp  portmidi.sln  portmidi.vcproj
postgresql-9.2.4/: HISTORY
pthread2w32/: pthread.h  version.rc
pthreadw32/: pthread.h  pthreadVC1.lib  sched.h  semaphore.h
roper/: BVSTRUCT.H  PIADCDEF.H  PIADCFCN.H  PIFCSDEF.H  PIGENDEF.H  PIIMGDEF.H  PIIMGFCN.H  PIINTDEF.H  PIINTFCN.H  PIKINFCN.H  PIMANDEF.H  PIMANFCN.H  PISHTDEF.H  PISKPFCN.H  PITIMDEF.H  PIXCM32.lib  PiTypes.h  cheader.h  pievtfcn.h  pifcsfcn.h  pigenfcn.h  pii2cdef.h  pii2cfcn.h  pikindef.h  pimlcfcn.h  pimltfcn.h  pioemdef.h  pioemfcn.h  pionldef.h  pionlfcn.h  piseqfcn.h  pishtfcn.h  pistpdef.h  pistpfcn.h  pitimfcn.h  pivardef.h  pivarfcn.h  piverdef.h  piverfcn.h  pividdef.h  (+1 more)
sdkcore/: sdkbuild.pl
tnt/: README.txt  tnt_array2d.h
usbkey_secutech/: readme
(+4331 files in other folders)
