noinst_LIBRARIES = libats.a

libats_a_SOURCES = common.c comp1d.c initfigure.c initgrad.c initrand.c persistence.c randex.c system.c timer.c


# here you should add all header files, which contains the functionality
# of your shared lib (published for the users)
include_HEADERS =

# here you should add all header files, which shouldn't be installed
noinst_HEADERS =

INCLUDES = -I../include -I../../trs/include -I../../../cv/include
CFLAGS += @DEBUG@
CXXFLAGS += @DEBUG@

